--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpartanMarketplace
-spring.datasource.url=data
+spring.datasource.url=database-url
 spring.jpa.hibernate.ddl-auto=update
 
 #Log out sql queries
