completed create listing use case

--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=SpartanMarketplace
-spring.datasource.url=jdbc:postgresql://ep-divine-base-adyes63p-pooler.c-2.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_ye2Lgnu1ZGTH&sslmode=require&channelBinding=require
+spring.datasource.url=
 spring.jpa.hibernate.ddl-auto=update
 
 #Log out sql queries
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+#UPLOAD FILE SIZE LIMITS
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
