--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpartanMarketplace
-spring.datasource.url=
+spring.datasource.url=jdbc:mysql://localhost:3306/spartan_marketplace
 spring.jpa.hibernate.ddl-auto=update
 
 #Log out sql queries
