--- a/backend-api/src/main/resources/application.properties
+++ b/backend-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpartanMarketplace
-spring.datasource.url=jdbc:mysql://localhost:3306/spartan_marketplace
+spring.datasource.url=jdbc:postgresql://ep-divine-base-adyes63p-pooler.c-2.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_7SIMfpbu1lnz&sslmode=require&channelBinding=require
 spring.jpa.hibernate.ddl-auto=update
 
 #Log out sql queries
